20190125
========
#39879 - OAuth 2.0 credentials can only be updated once
#41521 - Added profile errorprone to execute error prone
#41523 - Check and fix errors and CVE with error-prone and dependency check

20180927
========
#39540 - NullPointerException when access token is not found when refreshing OAuth 2.0 credentials
#39579 - Separate "entity collection" and "entity name" in parameters so that different collections of an entity can be accessed

20180903
========
#39047 - Client secret for OAuth2 should be a hidden parameter
#39069 - Authentication cache for OAuth not working as expected
#36303 - Error retrieving Decimal values from an OData4 source
#39213 - "Refr. Token Auth. Method" should have a default value option
#39237 - Fix inheritance between entities (attribute BaseType)
#39329 - Support TLS > 1.0 for java 7

20180820
========
#38628 - Send client credentials through basic authentication or in the body of the response
#29886 - OData 4 wrapper authentication pass-through

20180712
========
#38328 - Added support for HTTPS connections

20180529
========
#29882 - Add service format configuration in OData 4 Wrapper
#35771 - Custom header support for OData 4 Wrapper

20180516
========
- Created first version of this component for Denodo 7.0