@@ -30,7 +30,10 @@
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
-    <version>20190125</version>
+    <version>20190328</version>
+    <!-- *************************** -->
+    <!-- PROFILES -->
+    <!-- *************************** -->
     <properties>
         <java.version>1.8</java.version>
         <errorprone.javac.version>9+181-r4173-1</errorprone.javac.version>
